# amazon-kinesis-video-streams-producer-c

./: .gitignore  CMakeLists.txt  README.md
KVSService/: CMakeLists.txt
KVSService/source/: Main.cpp
KvsService/: CMakeLists.txt
KvsService/source/: KVSProducer.cpp  KvsPlayer.cpp  KvsProducer.cpp  KvsServiceProxy.h  Main.cpp  StreamSource.cpp
KvsService/source/common/: MethodQueue.cpp
MediaStreamProvider_cpp/: CMakeLists.txt  FmspMain.c  FmspServer.c  Makefile  cv28_build.sh  main.cpp  replacestreamprovider.sh  sshpush.sh
MediaStreamProvider_cpp/common/: MLogger.cpp  MLogger.h  MethodQueue.cpp  ResultQueue.h  ResultType.h
MediaStreamProvider_cpp/config/: fxn-camera-MediaProvider.service
MediaStreamProvider_cpp/doorbell-build/: CMakeCache.txt  Makefile  cmake_install.cmake  fxnMediaStreamProvider
MediaStreamProvider_cpp/inc/: FmspCommon.h  FmspConfig.h  FmspServer.h  OryxStreaming.h
MediaStreamProvider_cpp/james/: IJamesService.h  JamesService.cpp  JamesService.h  JamesServiceConfig.h  JamesServiceStub.cpp  JamesServiceStub.h
MediaStreamProvider_cpp/makefile_doorbell/: CMakeLists.txt
MediaStreamProvider_cpp/oryx/: OryxStreaming.cpp  OryxStreaming.h
MediaStreamProvider_cpp/pc/: AllPCStructures.h
MediaStreamProvider_cpp/player/: AllInterfaces.h  ComponentProvider.cpp  ComponentProvider.h  KvsPlayer.cpp  KvsPlayer.h  KvsProducer.cpp  KvsProducer.h  KvsServiceConfig.h  SampleProducer.h  SampleStreamSource.h  Settings.cpp  Settings.h  StreamSource.h
MediaStreamProvider_cpp/test/kvs/: cert  privkey
MediaStreamProvider_cpp/test/kvs/B813329BAFF8/: cert  privkey
MediaStreamProvider_cpp/test/kvs/samples/: KvsAudioOnlyStreamingSample.c  KvsAudioVideoStreamingSampleNew_backup2.c  KvsProducerService.cpp  KvsVideoOnlyOfflineStreamingSample.c  KvsVideoOnlyRealtimeStreamingSample.c
MediaStreamProvider_cpp/test/kvs/samples/src/: IKvsService.h  KvsService.h  KvsServiceStub.cpp  StreamSource.h
MediaStreamProvider_cpp/test/kvs/samples/src/common/: JsonUtility.cpp  JsonUtility.h
kvsservice/: CMakeLists.txt  cv28_build.sh
kvsservice/doorbell-build/: CMakeCache.txt  Makefile  cmake_install.cmake
kvsservice/source/: ComponentProvider.cpp  KVSProducer.h  KvsPlayer.h  KvsServiceConfig.h  KvsServiceProxy.cpp  Main.cpp  StreamSource.h
kvsservice/source/common/: JsonUtility.cpp  Logger.cpp  Logger.h  MLogger.cpp  MLogger.h  MethodQueue.h  ResultType.h
samples/: KvsAudioOnlyStreamingSample.c  KvsAudioVideoStreamingSample.c  KvsAudioVideoStreamingSampleNew.c  KvsAudioVideoStreamingSampleNew_20231108_01.c  KvsAudioVideoStreamingSampleNew_backup.c  KvsAudioVideoStreamingSampleNew_backup2.c  KvsProducerService.cpp  KvsVideoOnlyOfflineStreamingSample.c  KvsVideoOnlyRealtimeStreamingSample.c
samples/src/: AllInterfaces.h  ComponentProvider.cpp  ComponentProvider.h  KvsPlayer.cpp  KvsPlayer.h  KvsProducer.cpp  KvsProducer.h  KvsService.cpp  KvsService.h  KvsServiceStub.cpp  KvsServiceStub.h  StreamSource.h
samples/src/common/: JsonUtility.h  ServiceBase.cpp  ServiceBase.h
src/: CMakeLists.txt
